packages/typ/tests/fixtures/diagnostics/0888_gadt_local_abstract_return_mismatch_03.ml.expected
File "0888_gadt_local_abstract_return_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0888_gadt_local_abstract_return_mismatch_03 is not a valid module name.

File "0888_gadt_local_abstract_return_mismatch_03.ml", line 9, characters 21-22:
9 |     | WBool_gamma -> x
                         ^
Error: The value x has type a = bool but an expression was expected of type
         int
